 - [DS-118] File preview link during submission leads to page not found
 - [DS-121] XMLUI Feedback form breaks with multiple hostnames
 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete
 - [DS-251] Bulk Metadata Editing: XMLUI aspect and forms
 - [DS-363] JSPUI statistics views

(Claudia Juergen)
 - [DS-114] Links not working due to trailing white space in dspace.url
 - [DS-188] Misspell exclude.type=indentifier in dstat.cfg
 - [DS-197] Deleting a primary bitstream does not clear the primary_bitstream_id on the bundle table
 - [DS-222] Email alerts due to internal errors are not sent, if context is missing
 - [DS-231] Missig file (just some obsolete use of index-all in the current documentation, corrected the docs)
 - [DS-248] Missing admin column in community table in database-schema.sql and update - community admin patch
 - Item Importer - documented the use of non-dc metadata during item import
 - [DS-269] Oracle JDBC connection string wrong in dspace.cfg - ID: 2722093
 - Removed superfluous statistics configuration parameters from dspace.cfg

(Andreas Schwander / Claudia Juergen)
 - [DS-337] A bug related with adding new -EPersons
 
(Andreas Schwander / Kim Shepherd)
 - [DS-331] Config property mismatch between dspace.cfg and DSpaceLocaleAction (XMLUI)

(Ricardo Saraiva)
 - [DS-190] Portuguese (pt_PT) translation Messages.properties JSP-UI v1.5.2

(Stuart Lewis)
 - [DS-44] Monthly statistics skip first and last of month - SF ID: 2541435
 - [DS-161] Bulk metadata editing
 - [DS-194] Give METS ingester configuration option to make use of collection templates
 - [DS-195] Allow the primary bitstream to be set in the item importer / exporter
 - [DS-196] METS exposed via OAI-PMH includes description.provenance information
 - [DS-200] SWORD module requires the X-Packaging header
 - [DS-204] New -zip option for item exporter and importer