@@ -231,7 +231,7 @@
     }
 %>
 
-<div align="center"
+<div align="center">
     <form method="get" action="<%= request.getContextPath() %>/displaystats">
         <input type="hidden" name="handle" value="<%= handle %>"/>
         <input type="submit" name="submit_simple" value="<fmt:message key="jsp.display-item.display-statistics"/>" />
